--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -11,25 +11,54 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout Repo
         uses: actions/checkout@v4
 
+      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
+      # Step 3: Cache pip dependencies
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      # Step 4: Install dependencies
       - name: Install dependencies
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
 
+      # Step 5: Run tests
       - name: Run Tests
-        run: |
-          pytest --maxfail=1 || true
+        run: pytest --maxfail=1
 
+      # Step 6: Prepare artifacts directory
+      - name: Prepare Artifacts Directory
+        run: mkdir -p artifacts
+
+      # Step 7: Upload model artifacts
       - name: Upload Model Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: phishing-artifacts
           path: artifacts/
+
+      # Step 8: Deploy to Remote Server
+      - name: Deploy Artifacts via SSH
+        if: success()   # only run if previous steps succeed
+        uses: appleboy/ssh-action@v0.1.9
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          port: ${{ secrets.SERVER_PORT }}
+          source: "artifacts/"
+          target: "/path/on/server/to/deploy/"
